# aic

./: README.md  pyproject.toml
aic/: __init__.py  front.py  gemini.py  prompt.py
